Se reviso responsive

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -37,7 +37,7 @@
         <p class="container__actitud1__texto" > Contamos con un registro completo de contratistas que nos dan garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
       </div>
       <div class= "container__actitud1__dos">  
-        <img src="../recursos/actitud_1.jpg" class="imagenActitud1"alt="reunion">  
+        <img src="../recursos/actitud_1.jpg" class="imagenActitud1"alt="edificio">  
       </div>
     </section>
       
