Se revisaron todos los archivos html y scss

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2 class="tituloh2">La mejor administracion de la bella Buenos Aires</h2> 
         </div>
 
-          <!--carousel-->
+          <!--carousel con imagenes de Buenos Aires-->
         <section class="container-fluid" class="carousel">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -73,7 +73,7 @@
             </div> 
         </section>
 
-        <!-- Link pagina contacto aplicando transforaciones en el btn-->
+        <!-- pie de pagina - link pagina contacto aplicando transforaciones en el btn-->
         <section class="link">
             <div>   
                 <h2 class="link__contacto">Descubre nuestra forma de administrar y Contactanos !</h2>
