--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -46,7 +46,7 @@
             <p class="contactoTexto">Te proponemos una entrevista personal y la elaboración de una propuesta particularizada de administración estudiando los temas que hacen a vuestro interés.</p>
         </div>
         
-        <!--formulario-->
+        <!--formulario de contacto - disenado segun lo visto en el curso-->
         <section >
             <div class="imput">
                 <form method="post"> 
@@ -67,8 +67,8 @@
                         <input placeholder="Comentarios"class="imput__contacto__dos"/>
                     </div>
                     <divs class="imput__contacto1" >
-                        <input type="submit" value="Enviar Formulario"/>
-                        <input type="reset" value="Limpiar Formulario"/>
+                        <input type="submit" value="Enviar Formulario" class="imput__contacto__tres" />
+                        <input type="reset" value="Limpiar Formulario" class="imput__contacto__tres"/>
                     </div>
                 </form>
             </div>
