--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -31,7 +31,7 @@
             <h2 class="tituloh2">Acerca de Nosotros</h2> 
         </div>
 
-        <!--imagenes con texto aplicando gridS-->
+        <!--imagenes con texto aplicando grids-->
         <section class="container__nosotros1">
             <div class="container__nosotros1__uno">
                 <div class="text-container">
@@ -85,7 +85,7 @@
             </div>
         </section>
         
-        <!--link pagina contacto aplicando transformaciones-->
+        <!--pie de pagina - link pagina contacto aplicando transformaciones-->
         <section class="link">
             <div>   
                 <h2 class="link__contacto">Descubre nuestra forma de administrar y Contactanos !</h2>
