--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -31,7 +31,7 @@
       <h2 Class="tituloh2">Conoce como trabajamos</h2> 
     </div>
 
-     <!--texto y carousel de boostrack aplicando gridS-->
+     <!--texto y imagen aplicando grids-->
     <section class="container__actitud1"> 
       <div class="container__actitud1__uno">
         <p class="container__actitud1__texto" > Contamos con un registro completo de contratistas que nos dan garantía de confianza. Personal en plomería, calefacción, calderas, electricidad, ascensores, albañilería, obras civiles, pintura, gas, mantenimiento en espacios verdes, vigilancia y seguridad, etc. que a la hora de licitar se logran los presupuestos más eficientes con las debidas garantías. Frente a éstos se suman los que pudieran presentar los co-propietarios, los que serán evaluados en condiciones de igualdad. Se realiza el control de pólizas de seguros y contratos de ART de los proveedores.  </p>
@@ -41,7 +41,7 @@
       </div>
     </section>
       
-    <!--texto aplicando boostrap-->
+    <!--texto aplicando grids de boostrap-->
     <section class="container__actitud2">       
         <article class="row aling-items-center">    
             <div class="col-xl-4 col-md-6 col-sm-12">
@@ -76,7 +76,7 @@
       </div>
     </section> 
     
-    <!--link pagina contacto aplicando transformaciones en btn-->
+    <!--pie de pagina - link pagina contacto aplicando transformaciones en btn-->
     <section class="link">
       <div>   
         <h2 class="link__contacto">Descubre nuestra forma de administrar y Contactanos !</h2>
