--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <!--link pagina contacto aplicando transformaciones en btn-->
+        <!--pie de pagina - link pagina contacto aplicando transformaciones en btn-->
         <section class="link">
             <div>   
                 <h2 class="link__contacto" >Descubre nuestra forma de administrar y Contactanos !</h2>
