Se adpto el responsive a 660 px y galaxyA51/71

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -68,7 +68,7 @@
                     </div>
                     <divs class="imput__contacto1" >
                         <input type="submit" value="Enviar Formulario" class="imput__contacto__tres" />
-                        <input type="reset" value="Limpiar Formulario" class="imput__contacto__tres"/>
+                        <input type="reset" value="Limpiar Formulario" class="imput__contacto__cuatro"/>
                     </div>
                 </form>
             </div>
