Se modifico el archivo readme y detalles de nesting

--- a/paginas/actitud.html
+++ b/paginas/actitud.html
@@ -43,21 +43,21 @@
       
     <!--texto aplicando grids de boostrap-->
     <section class="container__actitud2">       
-        <article class="row aling-items-center">    
-            <div class="col-xl-4 col-md-6 col-sm-12">
-                <p class="container__actitud2__texto"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones.</p>
-            </div>  
-            <div class="col-xl-4 col-md-6 col-sm-12 ">
-                <p class="container__actitud2__texto" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
-            </div>
-            <div class="col-xl-4 col-md-6 col-sm-12 ">
-                <p class="container__actitud2__texto">Digitalizamos los comprobantes de cada gasto del edificio y otorgamos al propietario su acceso online. Buscamos facilitar la información y que refleje la honestidad de nuestro trabajo. Centramos nuestro objetivo del en proteger la economía del cliente.</p>           
-              </div>
-        </article>
+      <article class="row aling-items-center">    
+        <div class="col-xl-4 col-md-6 col-sm-12">
+          <p class="container__actitud2__texto"> Realizamos el mantenimiento del inmueble, contratación de profesionales para el asesoramiento y cotización de trabajos a realizar, auditorias del correcto funcionamiento de los bienes muebles e inmuebles, supervisión periódica de las reparaciones.</p>
+        </div>  
+        <div class="col-xl-4 col-md-6 col-sm-12 ">
+          <p class="container__actitud2__texto" >Creemos que la atención al cliente es un elemento clave en nuestro trabajo. Por este motivo, personal y telefónicamente, ponemos a su disposición nuestros recursos humanos. A su vez, hacemos una responsable labor informativa de todas las novedades.</p>
+        </div>
+        <div class="col-xl-4 col-md-6 col-sm-12 ">
+          <p class="container__actitud2__texto">Digitalizamos los comprobantes de cada gasto del edificio y otorgamos al propietario su acceso online. Buscamos facilitar la información y que refleje la honestidad de nuestro trabajo. Centramos nuestro objetivo del en proteger la economía del cliente.</p>           
+        </div>
+      </article>
     </section> 
     
-      <div>  
-        <h3 class="tituloh3Actitud" >Premisas para una buena administracion</h3>
+    <div>  
+      <h3 class="tituloh3Actitud" >Premisas para una buena administracion</h3>
      </div>
 
     <!--texto e imagen aplicando grids-->
@@ -87,7 +87,8 @@
     </section>
 
   </main>
- 
+
+    <!--footer-->
   <footer class="footer">
     <div class="footer__redes">
         <a href="https://www.instagram.com/" target="_blank">
