--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -52,19 +52,19 @@
                 <form method="post"> 
                     <div class="imput__contacto">
                         <label for="Nombre">Nombre</label> 
-                        <input placeholder="Nombre"class="imput__contacto__uno"/>
+                        <input class="imput__contacto__uno"/>
                     </div>
                     <div class="imput__contacto" >
                         <label for="@email">@email</label>
-                        <input placeholder="@email"class="imput__contacto__uno"/>
+                        <input class="imput__contacto__uno"/>
                     </div>
                     <div class="imput__contacto" >
                         <label for="Telefono">Telefono</label>
-                        <input placeholder="Telefono"class="imput__contacto__uno"/>
+                        <input class="imput__contacto__uno"/>
                     </div>
                     <div class="imput__contacto" >
                         <label for="Comentarios">Comentarios</label>                                                         
-                        <input placeholder="Comentarios"class="imput__contacto__dos"/>
+                        <input class="imput__contacto__dos"/>
                     </div>
                     <divs class="imput__contacto1" >
                         <input type="submit" value="Enviar Formulario" class="imput__contacto__tres" />
@@ -75,6 +75,7 @@
         </section>
     </main>
 
+    <!--footer-->
     <footer class="footer">
         <div class="rfooter-redes">
             <a href="https://www.instagram.com/" target="_blank">
