--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -81,18 +81,19 @@
                 <h2 class="link__contacto" >Descubre nuestra forma de administrar y Contactanos !</h2>
            </div>
            <div>
-            <button class="btn"><a href="contacto.html"class="btn__texto">Contacto</a></button>
+                <button class="btn"><a href="contacto.html"class="btn__texto">Contacto</a></button>
            </div>  
         </section>
     </main>
 
+        <!--footer-->
     <footer class="footer">
         <div class="footer__redes">
             <a href="https://www.instagram.com/" target="_blank">
-                <img src="../recursos/instagram.jpg" class="instagram"alt="imagen instagram"></a>
+            <img src="../recursos/instagram.jpg" class="instagram"alt="imagen instagram"></a>
 
             <a href="https://www.facebook.com/" target="_blank">
-                <img src="../recursos/facebook.png" class="facebook"alt="imagen facebook"></a>
+            <img src="../recursos/facebook.png" class="facebook"alt="imagen facebook"></a>
         </div>
               
         <nav class="navegador">            
