--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -97,10 +97,12 @@
         
     </main>
 
+    <!--footer-->
     <footer class="footer">
         <div class="footer__redes">
             <a href="https://www.instagram.com/" target="_blank">
                 <img src="../recursos/instagram.jpg" class="instagram"alt="Logo instagram"></a>
+
             <a href="https://www.facebook.com/" target="_blank">
                 <img src="../recursos/facebook.png" class="facebook"alt="Logo facebook"></a>
         </div>
