--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="recursos/buenosaires__1.jpg" class="d-block w-100" alt="puerto madero">
-                  </div>
-                <div class="carousel-item">
-                    <img src="recursos/buenosaires__2.jpg" class="d-block w-100" alt="puente de la mujer">
-                </div>
-                <div class="carousel-item">
-                    <img src="recursos/buenosaires__3.jpg" class="d-block w-100" alt="cupulas">
-                </div>
-                </div>
+                    <div class="carousel-item active">
+                        <img src="recursos/buenosaires__1.jpg" class="d-block w-100" alt="puerto madero">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="recursos/buenosaires__2.jpg" class="d-block w-100" alt="puente de la mujer">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="recursos/buenosaires__3.jpg" class="d-block w-100" alt="cupulas">
+                     </div>
+                <div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -68,7 +68,7 @@
                     <p class="indexTexto__p">Somos una organización que tiene como misión brindar soluciones integrales a los propietarios de propiedad horizontal. Nuestra filosofía de trabajo tiene como base la excelencia, por ello contamos con un equipo de profesionales que poseen adecuada formación y están en constante capacitación para así poder proveer soluciones optimas.</p>
                 </div>
                 <div> 
-                <p class="indexTexto__p">La administración de propiedad horizontal no es tarea sencilla, por eso nos hemos enfocado en profesionalizarnos tanto en edificaciones antiguas como modernas ya que ambas tienen sus respectivos dilemas, avocándonos en los mismos para brindar la más eficiente resolución. La planificación de las tareas esta basada en el requerimiento de cada inmueble </p>
+                    <p class="indexTexto__p">La administración de propiedad horizontal no es tarea sencilla, por eso nos hemos enfocado en profesionalizarnos tanto en edificaciones antiguas como modernas ya que ambas tienen sus respectivos dilemas, avocándonos en los mismos para brindar la más eficiente resolución. La planificación de las tareas esta basada en el requerimiento de cada inmueble </p>
                 </div>
             </div> 
         </section>
@@ -89,9 +89,9 @@
     <footer class="footer">
         <div class="footer__redes">
             <a href="https://www.instagram.com/"target="_blank">
-                <img src="recursos/instagram.jpg" class="instagram" alt="logo instagram"></a>
+            <img src="recursos/instagram.jpg" class="instagram" alt="logo instagram"></a>
             <a href="https://www.facebook.com/ "target="_blank">
-                <img src="recursos/facebook.png" class="facebook"alt="logo facebook"></a>
+            <img src="recursos/facebook.png" class="facebook"alt="logo facebook"></a>
         </div>
               
         <nav class="navegador">            
@@ -103,8 +103,6 @@
         </nav>    
     </footer>
     
-</body>
-</html>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
